Did so the subType list can be reversed to for example do, so it only blocks 5 material types instead of having to include all but 5 material types. Fixed an issue with CMI & me being stupid regarding ranks.